# Raptor

./: .gitignore  CODE-OF-CONDUCT  CONTRIBUTING  LICENSE  README.md  Raptor.desktop  build.sh  imgui.ini  push.sh
Engine/Source/: CMakeLists.txt
Engine/Source/Common/Common/: Array.h  Required.h  String.h  TypeTraits.h  Types.h  Utility.h
Engine/Source/Entry/: CMakeLists.txt  Main.cpp
Engine/Source/Graphics/: CMakeLists.txt  module.json
Engine/Source/Graphics/Graphics/: Commands.h  DrawContext.h  RenderDevice.h  SwapChain.h  Window.h
Engine/Source/Graphics/Private/: DrawContext.cpp  Window.cpp
Engine/Source/Graphics/Private/OpenGL/: RenderDevice.cpp
Engine/Source/Kernel/: CMakeLists.txt
Engine/Source/Kernel/Kernel/: SharedLib.h  Task.h  ThreadPool.h  WorkQueue.h
Engine/Source/Kernel/Private/: Semaphore.h  ThreadPool.cpp  WorkerThread.h
Engine/Source/Kernel/Private/POSIX/: SharedLib.cpp
Engine/Source/Runtime/: main.cpp
Engine/Source/Runtime/Core/: Camera.cpp  Camera.h  Display.cpp  Display.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
Engine/Source/Runtime/Core/Async/: README.md  Scheduler.cpp  Scheduler.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h
Engine/Source/Runtime/Core/Backend/: Application.cpp  Application.h  Display.cpp  Display.h  InputHandler.cpp  InputHandler.h
Engine/Source/Runtime/Core/Common/: CoreDefines.h  CoreTypes.h  Required.h
Engine/Source/Runtime/Core/Containers/: BufferStream.h  SLinkedList.cpp  SLinkedList.h  SLinkedList.hpp
Engine/Source/Runtime/Core/ECS/: Component.cpp  Component.h
Engine/Source/Runtime/Core/Filesystem/: Utils.h
Engine/Source/Runtime/Core/Math/: Vec4.cpp  Vec4.h  Vector.cpp  Vector.h  Vector4.cpp  Vector4.h
Engine/Source/Runtime/Core/Memory/: AssetManager.h  BlobLoader.cpp  BlobLoader.h  Cache.h  GlobalStore.cpp  GlobalStore.h  HeapAlloc.cpp  HeapAlloc.h  LinearAlloc.cpp  LinearAlloc.h  LinearAlloc.hpp  Utils.h
Engine/Source/Runtime/Core/Misc/: CoreDefines.h  CoreTypes.h
Engine/Source/Runtime/Core/Private/: Functions.cpp  JsUtil.cpp  Plugins.cpp  SharedLib.cpp
Engine/Source/Runtime/Core/Utils/: ClassUtils.h
Engine/Source/Runtime/Entry/Private/: Main.cpp
Engine/Source/Runtime/Graphics/: CommandBuffer.h  CommandBufferStream.cpp  CommandBufferStream.h  Commands.h  Constants.h  DrawContext.cpp  DrawContext.h  RenderBackend.h  RenderContext.cpp  RenderContext.h  RenderDevice.h  RenderResource.h  ResourceContext.h
Engine/Source/Runtime/Graphics/Device/: Display.cpp  Display.h  GLContext.h
Engine/Source/Runtime/Graphics/GLEX/: Backend.h  RenderDevice.h
Engine/Source/Runtime/Graphics/Model/: Geometry.cpp  Geometry.h  ModelLoader.cpp  ModelLoader.h
Engine/Source/Runtime/Graphics/OpenGL/: Constants.h  Context.h  DeviceState.h  GLRenderer.h  RenderContext.cpp  RenderContext.h  RenderDevice.cpp  RenderDevice.h  ResourceManager.h
(+165 files in other folders)
